--- a/Codigo/Modulos/Nominas/Capa_Vista_Nominas/Capa_Vista_Nominas.csproj
+++ b/Codigo/Modulos/Nominas/Capa_Vista_Nominas/Capa_Vista_Nominas.csproj
@@ -40,6 +40,9 @@
     <Reference Include="Capa_Vista_HorasExtras">
       <HintPath>..\HorasExtras\Capa_Vista_HorasExtras\bin\Debug\Capa_Vista_HorasExtras.dll</HintPath>
     </Reference>
+    <Reference Include="Capa_Vista_Liquidaciones">
+      <HintPath>..\Liquidaciones_Empleados\Capa_Vista_Liquidaciones\bin\Debug\Capa_Vista_Liquidaciones.dll</HintPath>
+    </Reference>
     <Reference Include="Capa_Vista_Navegador">
       <HintPath>..\..\..\Componentes\Navegador\Capa_Vista_Navegador\bin\Debug\Capa_Vista_Navegador.dll</HintPath>
     </Reference>
